--- a/index.html
+++ b/index.html
@@ -1,37 +1,30 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emergency Service Hotline</title>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </script>
     <script src="https://kit.fontawesome.com/a2e0e6ad65.js" crossorigin="anonymous"></script>
 </head>
 <body class="bg-gray-100">
-<nav class="navbar bg-base-200 px-6 flex justify-between">
-    <!-- Left: Logo + Title -->
+ <nav class="bg-white shadow px-6 top-0 flex justify-between items-center h-16">
     <div class="flex items-center gap-2">
-      <img src="assets/logo.png" alt="Logo" class="w-8 h-8">
+      <img src="assets/logo.png" alt="Logo" class="w-8 h-8" />
       <span class="text-lg font-bold text-green-700">Emergency Service</span>
     </div>
-
-    <!-- Right: Heart, Coins, Copy -->
-    <div class="flex gap-6 items-center">
-      <!-- Heart (using picture) -->
-      <div class="flex items-center gap-1">
+    <div class="flex items-center gap-6">
+      <div class="flex items-center gap-1 text-red-600 font-semibold">
         <span id="heartCount">0</span>
-        <img src="assets/heart.png" alt="Heart" class="w-5 h-5"> 
+        <img src="assets/heart.png" alt="Heart" class="w-5 h-5" /> 
       </div>
-      <!-- Coin -->
       <div class="flex items-center gap-1 text-yellow-600 font-semibold">
-        <span id="coinCount">100</span>
-        <img src="assets/coin.png" alt="Coin" class="w-5 h-5">
-    </div>
-      <!-- Copy -->
+         <span id="coinCount">100</span>
+         <img src="assets/coin.png" alt="Coin" class="w-5 h-5" />
+      </div>
       <div>
-      <span id="copyBadge" class="px-3 py-1 rounded-lg bg-green-500 text-white text-sm font-semibold inline-block">0 Copy</span>
+        <span id="copyBadge" class="px-3 py-1 rounded-lg bg-green-500 text-white text-sm font-semibold inline-block">0 Copy</span>
       </div>
     </div>
   </nav>
