--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
     </div>
   </nav>
 
-
+<section class="text-center py-8 bg-gradient-to-t from-green-900 to-green-900">
+    <img src="assets/logo-dark.png" alt="Gov Logo" class="mx-auto w-16 h-16" />
+    <h1 class="text-2xl font-bold mt-4 text-white">Emergency Service Directory</h1>
+    <p class="text-sm mt-1 text-white">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+  </section>
 
 
     <script src="index.js"></script>
