--- a/index.html
+++ b/index.html
@@ -34,7 +34,45 @@
     <h1 class="text-2xl font-bold mt-4 text-white">Emergency Service Directory</h1>
     <p class="text-sm mt-1 text-white">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
   </section>
+ 
+  <main class="container mx-auto grid grid-cols-1 lg:grid-cols-4 gap-6 pb-12 px-4 lg:px-0">
+    <!-- CARDS GRID -->
+    <section class="lg:col-span-3 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
 
+      <!-- CARD TEMPLATE -->
+      <article class="bg-white shadow p-4 relative rounded-lg">
+        <button class="absolute top-3 left-3 text-red-500 hover:scale-110 transition heartBtn" title="Like">
+          <i class="fa-regular fa-heart text-xl"></i>
+        </button>
+        <div class="flex items-center gap-2 mb-1">
+          <img src="/icons/police.png" alt="icon" class="w-6 h-6" />
+          <h2 class="font-semibold">National Emergency (All)</h2>
+        </div>
+        <p class="text-sm text-gray-500">English: National Emergency</p>
+        <p class="font-bold mt-1 text-lg">999</p>
+        <div class="mt-2">
+          <span class="px-2 py-1 border border-gray-400 rounded-full text-xs">All</span>
+        </div>
+        <div class="flex justify-between mt-4">
+          <button class="px-2 py-1 border border-gray-400 rounded text-sm copyBtn" data-number="999">📋 Copy</button>
+          <button class="px-2 py-1 bg-green-500 text-white rounded text-sm callBtn" data-name="National Emergency" data-number="999">📞 Call</button>
+        </div>
+      </article>
+
+      
+    </section>
+
+    <!-- HISTORY PANEL -->
+    <aside class="bg-white shadow p-4 rounded">
+      <div class="flex justify-between items-center mb-4">
+        <h3 class="font-bold text-lg flex items-center gap-2">
+          <i class="fas fa-history"></i> Call History
+        </h3>
+        <button class="px-2 py-1 bg-red-500 text-white text-xs rounded" id="clearHistory">Clear</button>
+      </div>
+      <ul id="historyList" class="space-y-2 text-sm text-gray-700"></ul>
+    </aside>
+  </main>
 
     <script src="index.js"></script>
 </body>
