--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
  
   <main class="container mx-auto grid grid-cols-1 lg:grid-cols-4 gap-6 pb-12 px-4 lg:px-0">
     <!-- CARDS GRID -->
-    <section class="lg:col-span-3 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
+    <section class="lg:col-span-3 grid sm:grid-cols-2 lg:grid-cols-3 gap-6 order-2 lg:order-1">
 
       <!-- CARD TEMPLATE -->
       <article class="bg-white shadow p-4 relative rounded-lg">
@@ -53,10 +53,11 @@
           <span class="px-2 py-1 border border-gray-400 rounded-full text-xs">All</span>
         </div>
         <div class="flex justify-between mt-4">
-          <button class="px-2 py-1 border border-gray-400 rounded text-sm copyBtn" data-number="999"><i class="fa-solid fa-copy"></i>Copy</button>
-          <button class="px-2 py-1 bg-green-500 text-white rounded text-sm callBtn" data-name="National Emergency" data-number="999"><i class="fa-solid fa-phone"></i>Call</button>
+          <button class="px-2 py-1 border border-gray-400 rounded text-sm copyBtn hover:bg-green-500 hover:text-white cursor-pointer" data-number="999"><i class="fa-solid fa-copy"></i>Copy</button>
+          <button class="px-2 py-1 bg-green-500 text-white rounded text-sm callBtn cursor-pointer" data-name="National Emergency" data-number="999"><i class="fa-solid fa-phone"></i>Call</button>
         </div>
       </article>
+
       <article class="bg-white shadow p-4 relative rounded-lg">
         <button class="absolute top-3 right-3 text-red-500 hover:scale-110 transition heartBtn" title="Like"><i class="fa-solid fa-heart"></i>
         </button>
@@ -70,8 +71,8 @@
           <span class="px-2 py-1 border border-gray-400 rounded-full text-xs">Police</span>
         </div>
         <div class="flex justify-between mt-4">
-          <button class="px-2 py-1 border border-gray-400 rounded text-sm copyBtn" data-number="999"><i class="fa-solid fa-copy"></i>Copy</button>
-          <button class="px-2 py-1 bg-green-500 text-white rounded text-sm callBtn" data-name="National Emergency" data-number="999"><i class="fa-solid fa-phone"></i>Call</button>
+          <button class="px-2 py-1 border border-gray-400 rounded text-sm copyBtn hover:bg-green-500 hover:text-white cursor-pointer" data-number="999"><i class="fa-solid fa-copy"></i>Copy</button>
+          <button class="px-2 py-1 bg-green-500 text-white rounded text-sm callBtn cursor-pointer" data-name="Police Helpline Number" data-number="999"><i class="fa-solid fa-phone"></i>Call</button>
         </div>
       </article>
       <article class="bg-white shadow p-4 relative rounded-lg">
@@ -87,8 +88,8 @@
           <span class="px-2 py-1 border border-gray-400 rounded-full text-xs">Fire</span>
         </div>
         <div class="flex justify-between mt-4">
-          <button class="px-2 py-1 border border-gray-400 rounded text-sm copyBtn" data-number="999"><i class="fa-solid fa-copy"></i>Copy</button>
-          <button class="px-2 py-1 bg-green-500 text-white rounded text-sm callBtn" data-name="National Emergency" data-number="999"><i class="fa-solid fa-phone"></i>Call</button>
+          <button class="px-2 py-1 border border-gray-400 rounded text-sm copyBtn hover:bg-green-500 hover:text-white cursor-pointer" data-number="999"><i class="fa-solid fa-copy"></i>Copy</button>
+          <button class="px-2 py-1 bg-green-500 text-white rounded text-sm callBtn cursor-pointer" data-name="Fire Service" data-number="999"><i class="fa-solid fa-phone"></i>Call</button>
         </div>
       </article>
       <article class="bg-white shadow p-4 relative rounded-lg">
@@ -104,8 +105,8 @@
           <span class="px-2 py-1 border border-gray-400 rounded-full text-xs">Health</span>
         </div>
         <div class="flex justify-between mt-4">
-          <button class="px-2 py-1 border border-gray-400 rounded text-sm copyBtn" data-number="999"><i class="fa-solid fa-copy"></i>Copy</button>
-          <button class="px-2 py-1 bg-green-500 text-white rounded text-sm callBtn" data-name="National Emergency" data-number="999"><i class="fa-solid fa-phone"></i>Call</button>
+          <button class="px-2 py-1 border border-gray-400 rounded text-sm copyBtn hover:bg-green-500 hover:text-white cursor-pointer" data-number="999"><i class="fa-solid fa-copy"></i>Copy</button>
+          <button class="px-2 py-1 bg-green-500 text-white rounded text-sm callBtn cursor-pointer" data-name="Ambulance Service" data-number="199-3333"><i class="fa-solid fa-phone"></i>Call</button>
         </div>
       </article>
       <article class="bg-white shadow p-4 relative rounded-lg">
@@ -121,8 +122,8 @@
           <span class="px-2 py-1 border border-gray-400 rounded-full text-xs">Help</span>
         </div>
         <div class="flex justify-between mt-4">
-          <button class="px-2 py-1 border border-gray-400 rounded text-sm copyBtn" data-number="999"><i class="fa-solid fa-copy"></i>Copy</button>
-          <button class="px-2 py-1 bg-green-500 text-white rounded text-sm callBtn" data-name="National Emergency" data-number="999"><i class="fa-solid fa-phone"></i>Call</button>
+          <button class="px-2 py-1 border border-gray-400 rounded text-sm copyBtn hover:bg-green-500 hover:text-white cursor-pointer" data-number="999"><i class="fa-solid fa-copy"></i>Copy</button>
+          <button class="px-2 py-1 bg-green-500 text-white rounded text-sm callBtn cursor-pointer" data-name="Women & Child Helpline" data-number="109"><i class="fa-solid fa-phone"></i>Call</button>
         </div>
       </article>
       <article class="bg-white shadow p-4 relative rounded-lg">
@@ -138,8 +139,8 @@
           <span class="px-2 py-1 border border-gray-400 rounded-full text-xs">Govt</span>
         </div>
         <div class="flex justify-between mt-4">
-          <button class="px-2 py-1 border border-gray-400 rounded text-sm copyBtn" data-number="999"><i class="fa-solid fa-copy"></i>Copy</button>
-          <button class="px-2 py-1 bg-green-500 text-white rounded text-sm callBtn" data-name="National Emergency" data-number="999"><i class="fa-solid fa-phone"></i>Call</button>
+          <button class="px-2 py-1 border border-gray-400 rounded text-sm copyBtn hover:bg-green-500 hover:text-white cursor-pointer" data-number="999"><i class="fa-solid fa-copy"></i>Copy</button>
+          <button class="px-2 py-1 bg-green-500 text-white rounded text-sm callBtn cursor-pointer" data-name="Anti-Corruption Helpline" data-number="106"><i class="fa-solid fa-phone"></i>Call</button>
         </div>
       </article>
 
@@ -147,12 +148,12 @@
     </section>
 
     <!-- HISTORY PANEL -->
-    <aside class="bg-white shadow p-4 rounded">
+    <aside class="bg-white shadow p-4 rounded order-1 lg:order-2">
       <div class="flex justify-between items-center mb-4">
         <h3 class="font-bold text-lg flex items-center gap-2">
           <i class="fas fa-history"></i> Call History
         </h3>
-        <button class="px-2 py-1 bg-red-500 text-white text-xs rounded" id="clearHistory">Clear</button>
+        <button class="px-2 py-1 bg-red-500 text-white text-xs rounded cursor-pointer" id="clearHistory">Clear</button>
       </div>
       <ul id="historyList" class="space-y-2 text-sm text-gray-700"></ul>
     </aside>
