--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <span class="px-2 py-1 border border-gray-400 rounded-full text-xs">Health</span>
         </div>
         <div class="flex justify-between mt-4">
-          <button class="px-2 py-1 border border-gray-400 rounded text-sm copyBtn hover:bg-green-500 hover:text-white cursor-pointer" data-number="999"><i class="fa-solid fa-copy"></i>Copy</button>
+          <button class="px-2 py-1 border border-gray-400 rounded text-sm copyBtn hover:bg-green-500 hover:text-white cursor-pointer" data-number="199-3333"><i class="fa-solid fa-copy"></i>Copy</button>
           <button class="px-2 py-1 bg-green-500 text-white rounded text-sm callBtn cursor-pointer" data-name="Ambulance Service" data-number="199-3333"><i class="fa-solid fa-phone"></i>Call</button>
         </div>
       </article>
@@ -122,7 +122,7 @@
           <span class="px-2 py-1 border border-gray-400 rounded-full text-xs">Help</span>
         </div>
         <div class="flex justify-between mt-4">
-          <button class="px-2 py-1 border border-gray-400 rounded text-sm copyBtn hover:bg-green-500 hover:text-white cursor-pointer" data-number="999"><i class="fa-solid fa-copy"></i>Copy</button>
+          <button class="px-2 py-1 border border-gray-400 rounded text-sm copyBtn hover:bg-green-500 hover:text-white cursor-pointer" data-number="109"><i class="fa-solid fa-copy"></i>Copy</button>
           <button class="px-2 py-1 bg-green-500 text-white rounded text-sm callBtn cursor-pointer" data-name="Women & Child Helpline" data-number="109"><i class="fa-solid fa-phone"></i>Call</button>
         </div>
       </article>
@@ -139,8 +139,59 @@
           <span class="px-2 py-1 border border-gray-400 rounded-full text-xs">Govt</span>
         </div>
         <div class="flex justify-between mt-4">
-          <button class="px-2 py-1 border border-gray-400 rounded text-sm copyBtn hover:bg-green-500 hover:text-white cursor-pointer" data-number="999"><i class="fa-solid fa-copy"></i>Copy</button>
+          <button class="px-2 py-1 border border-gray-400 rounded text-sm copyBtn hover:bg-green-500 hover:text-white cursor-pointer" data-number="106"><i class="fa-solid fa-copy"></i>Copy</button>
           <button class="px-2 py-1 bg-green-500 text-white rounded text-sm callBtn cursor-pointer" data-name="Anti-Corruption Helpline" data-number="106"><i class="fa-solid fa-phone"></i>Call</button>
+        </div>
+      </article>
+      <article class="bg-white shadow p-4 relative rounded-lg">
+        <button class="absolute top-3 right-3 text-red-500 hover:scale-110 transition heartBtn" title="Like"><i class="fa-solid fa-heart"></i>
+        </button>
+        <div class="flex items-center gap-2 mb-1">
+          <img src="assets/emergency.png" alt="icon" class="w-6 h-6" />
+          <h2 class="font-semibold">Electricity Helpline</h2>
+        </div>
+        <p class="text-sm text-gray-500">Electricity Outrage</p>
+        <p class="font-bold mt-1 text-lg">16216</p>
+        <div class="mt-2">
+          <span class="px-2 py-1 border border-gray-400 rounded-full text-xs">Electricity </span>
+        </div>
+        <div class="flex justify-between mt-4">
+          <button class="px-2 py-1 border border-gray-400 rounded text-sm copyBtn hover:bg-green-500 hover:text-white cursor-pointer" data-number="16216"><i class="fa-solid fa-copy"></i>Copy</button>
+          <button class="px-2 py-1 bg-green-500 text-white rounded text-sm callBtn cursor-pointer" data-name="Electricity Helpline" data-number="16216"><i class="fa-solid fa-phone"></i>Call</button>
+        </div>
+      </article>
+      <article class="bg-white shadow p-4 relative rounded-lg">
+        <button class="absolute top-3 right-3 text-red-500 hover:scale-110 transition heartBtn" title="Like"><i class="fa-solid fa-heart"></i>
+        </button>
+        <div class="flex items-center gap-2 mb-1">
+          <img src="assets/brac.png" alt="icon" class="w-6 h-6" />
+          <h2 class="font-semibold">Brac Helpline</h2>
+        </div>
+        <p class="text-sm text-gray-500">Brac</p>
+        <p class="font-bold mt-1 text-lg">16445</p>
+        <div class="mt-2">
+          <span class="px-2 py-1 border border-gray-400 rounded-full text-xs">NGO</span>
+        </div>
+        <div class="flex justify-between mt-4">
+          <button class="px-2 py-1 border border-gray-400 rounded text-sm copyBtn hover:bg-green-500 hover:text-white cursor-pointer" data-number="16445"><i class="fa-solid fa-copy"></i>Copy</button>
+          <button class="px-2 py-1 bg-green-500 text-white rounded text-sm callBtn cursor-pointer" data-name="Brac Helpline" data-number="16445"><i class="fa-solid fa-phone"></i>Call</button>
+        </div>
+      </article>
+      <article class="bg-white shadow p-4 relative rounded-lg">
+        <button class="absolute top-3 right-3 text-red-500 hover:scale-110 transition heartBtn" title="Like"><i class="fa-solid fa-heart"></i>
+        </button>
+        <div class="flex items-center gap-2 mb-1">
+          <img src="assets/Bangladesh-Railway.png" alt="icon" class="w-6 h-6" />
+          <h2 class="font-semibold">Bangladesh Railway Helpline</h2>
+        </div>
+        <p class="text-sm text-gray-500">Bangladesh Railway</p>
+        <p class="font-bold mt-1 text-lg">163</p>
+        <div class="mt-2">
+          <span class="px-2 py-1 border border-gray-400 rounded-full text-xs">Travel</span>
+        </div>
+        <div class="flex justify-between mt-4">
+          <button class="px-2 py-1 border border-gray-400 rounded text-sm copyBtn hover:bg-green-500 hover:text-white cursor-pointer" data-number="163"><i class="fa-solid fa-copy"></i>Copy</button>
+          <button class="px-2 py-1 bg-green-500 text-white rounded text-sm callBtn cursor-pointer" data-name="Bangladesh Railway" data-number="163"><i class="fa-solid fa-phone"></i>Call</button>
         </div>
       </article>
 
